--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "server": "server/pocketbase serve",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "gen-types": "pocketbase-typegen --db server/pb_data/data.db --out src/types/pocketbase.ts"
   },
   "dependencies": {
+    "pocketbase": "0.8.3",
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.14",
     "astro-spa": "^1.3.9",
     "svelte": "^3.54.0",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "pocketbase-typegen": "1.1.2"
   }
 }
