--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "gen-types": "pocketbase-typegen --db server/pb_data/data.db --out src/types/pocketbase.ts"
   },
   "dependencies": {
-    "pocketbase": "0.8.3",
+    "@astrojs/node": "^3.1.1",
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.6.14",
+    "astro": "^1.6.15",
     "astro-spa": "^1.3.9",
+    "pocketbase": "0.8.3",
     "svelte": "^3.54.0",
     "tailwindcss": "^3.2.4"
   },
