--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/node": "3.1.1",
     "@astrojs/svelte": "1.0.2",
     "@astrojs/tailwind": "2.1.3",
+    "@fontsource/poppins": "^4.5.10",
     "astro": "1.6.15",
     "astro-spa": "^1.3.9",
     "pocketbase": "0.8.4",
