--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "gen-types": "pocketbase-typegen --db server/pb_data/data.db --out src/types/pocketbase.ts"
   },
   "dependencies": {
-    "@astrojs/node": "3.1.1",
+    "@astrojs/node": "4.0.0",
     "@astrojs/svelte": "1.0.2",
     "@astrojs/tailwind": "2.1.3",
-    "@fontsource/poppins": "^4.5.10",
-    "astro": "1.6.15",
-    "astro-spa": "^1.3.9",
-    "pocketbase": "0.8.4",
+    "@fontsource/poppins": "4.5.10",
+    "js-cookie": "3.0.1",
+    "astro": "1.7.2",
+    "astro-spa": "1.3.9",
+    "pocketbase": "0.9.0",
     "svelte": "3.55.0",
     "tailwindcss": "3.2.4"
-  },
-  "devDependencies": {
+},
+"devDependencies": {
+    "@types/js-cookie": "3.0.2",
     "pocketbase-typegen": "1.1.2"
   }
 }
